# STARS

./: README.md  pyproject.toml  requirements.txt  stars.py
.github/workflows/: python-package.yml
core/: utils.py
scanners/: awsdns.py  azuredns.py  cloudflaredns.py  digitaloceandns.py  filedns.py  gcpdns.py
tests/: test_verifier_takeover.py
verifiers/: takeover.py
