[tool.poetry]
name = "STARS"
version = "1.0.0"
description = "A multi-cloud DNS record scanner that aims to help cybersecurity/IT analysts identify dangling CNAME records in their cloud DNS services that could possibly lead to subdomain takeover scenarios."
authors = ["Macmod <zz.mcmd@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
colorama = "^0.4.6"
dnspython = "^2.3.0"
tabulate = "^0.9.0"
boto3 = "^1.26.91"
azure-mgmt-dns = "^8.0.0"
azure-mgmt-privatedns = "^1.0.0"
azure-identity = "^1.12.0"
google-cloud-dns = "^0.34.1"
python-digitalocean = "^1.17.0"
python-cloudflare = "^1.0.1"
tqdm = "^4.65.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
